# XhinkingTodo

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup_env.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: build.ps1  build.sh  generate_ico.py  package.cjs  sync-version.cjs
src/: App.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/packaging/linux/: xhinkingtodo.desktop
src-tauri/src/: commands.rs  main.rs  models.rs  storage.rs
src/components/: AboutPanel.tsx  DockIndicator.tsx  Header.tsx  PinButton.tsx  SettingsPanel.tsx  Sidebar.tsx  SortableGroupItem.tsx  TodoCreator.tsx  TodoEditor.tsx  TodoItem.tsx  TodoList.tsx
src/i18n/: index.ts
src/services/: api.ts
src/styles/: index.css
src/types/: index.ts
